# OpenGraph-dlt

./: .gitignore  README.md  main.py  pyproject.toml
cli/: collect.py  convert.py  icons.py  sync.py
destinations/opengraph/: client.py  destination.py
destinations/opengraph/models/: entries.py  graph.py
docs/mermaid/: collection-kube.mmd  collection.mmd  destination.mmd
opengraph_dlt/: main.py
opengraph_dlt/cli/: collect.py  convert.py  icons.py  preproc.py  sync.py
opengraph_dlt/destinations/opengraph/: client.py  destination.py
opengraph_dlt/sources/aws/: collect.py  convert.py  lookup.py  source.py
opengraph_dlt/sources/aws/dbt/: dbt_project.yml  profiles.yml
opengraph_dlt/sources/aws/models/: ec2_instance.py  eks.py  graph.py  group.py  identity_provider.py  inline_policy.py  membership.py  pod_identity.py  policy.py  policy_attachments.py  resource.py  role.py  user.py
opengraph_dlt/sources/bloodhound/: lookup.py  source.py
opengraph_dlt/sources/bloodhound/dbt/: profiles.yml
opengraph_dlt/sources/bloodhound/models/: node.py
opengraph_dlt/sources/dummy/: collect.py  convert.py
opengraph_dlt/sources/jamf/: source.py
opengraph_dlt/sources/kubernetes/: README.md  collect.py  convert.py  lookup.py  source.py
opengraph_dlt/sources/okta/: source.py
opengraph_dlt/sources/rapid7/: source.py
opengraph_dlt/sources/resource_files/: source.py
opengraph_dlt/sources/shared/: convert.py  guid.py  lookup.py
sources/aws/: icons.py  lookup.py  source.py
sources/aws/dbt/: dbt_project.yml  profiles.yml
sources/aws/models/: ec2_instance.py  eks.py  entries.py  graph.py  group.py  membership.py  policy.py  resource.py  role.py  user.py
sources/aws/utils/: guid.py  lookup.py
sources/bloodhound/: lookup.py  source.py
sources/bloodhound/dbt/: dbt_project.yml  profiles.yml
sources/bloodhound/models/: node.py
sources/kubernetes/: icons.py  lookup.py  source.py
sources/kubernetes/dbt/: dbt_project.yml  profiles.yml
sources/kubernetes/models/: __init__.py  cluster.py  cluster_role.py  cluster_role_binding.py  daemonset.py  deployment.py  dynamic.py  entries.py  generic.py  graph.py  icons.py  identities.py  namespace.py  node.py  pod.py  replicaset.py  resource.py  resource_group.py  role.py  role_binding.py  service_account.py  stale.py  statefulset.py  volume.py
sources/kubernetes/utils/: api.py  guid.py  helpers.py  lookup.py
sources/rapid7/: icons.py  source.py
sources/rapid7/models/: entries.py  graph.py  vulnerability.py
sources/rapid7/utils/: guid.py  lookup.py
sources/shared/: lookup.py
sources/shared/models/: entries.py  graph.py
tests/: test_collect_cli.py  test_convert_cli.py
(+113 files in other folders)
