[project]
name = "opengraph-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt>=1.0.0.40.6",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "dlt[parquet]>=1.17.1",
    "duckdb==1.3.2",
    "duckdb-engine>=0.17.0",
    "enlighten>=1.14.1",
    "kubernetes>=34.1.0",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "pydantic>=2.11.9",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
]
