[project]
name = "opengraph-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.47",
    "dbt>=1.0.0.40.6",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "dlt[deltalake,parquet]>=1.17.1",
    "duckdb==1.3.2",
    "duckdb-engine>=0.17.0",
    "enlighten>=1.14.1",
    "flagembedding>=1.3.5",
    "kubernetes>=34.1.0",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.11.9",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ibis-framework[duckdb]>=11.0.0",
    "ipython>=9.6.0",
    "marimo>=0.17.0",
]
