[project]
name = "opengraph-dlt"
version = "0.2.2"
description = "OpenGraph collectors using DLT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "boto3>=1.40.47",
    "dbt>=1.0.0.40.6",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "dlt[deltalake,parquet]>=1.17.1",
    "duckdb==1.3.2",
    "duckdb-engine>=0.17.0",
    "enlighten>=1.14.1",
    # "flagembedding>=1.3.5",
    "kubernetes>=34.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    # "networkx>=3.5",
    # "numpy>=2.3.3",
    "polars>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.9",
    # "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]

[project.scripts]
opengraph = "opengraph_dlt.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["opengraph_dlt*"]

[tool.setuptools.package-data]
"opengraph_dlt" = [
    "sources/*/dbt/*.yml",
    "sources/*/dbt/models/**/*.sql",
    "sources/*/dbt/models/**/*.yml"
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ibis-framework[duckdb]>=11.0.0",
    "ipython>=9.6.0",
    "jupyterlab>=4.4.10",
    "marimo>=0.17.0",
]
